# DREAM3DSuperbuild

./: .floo  .gitignore  Boost.cmake  CMakeLists.txt  DOxygen.cmake  Doxygen_osx_install.sh.in  Eigen.cmake  HDF5.cmake  ITK.cmake  LICENSE  README.md  ReadMe.md  TBB.cmake  tbb_osx_install.sh.in
Help/: OSX_Making_An_SDK.html
Resources/: Linux_Making_An_SDK.md  OSX_Making_An_SDK.md  Windows_Making_An_SDK.md
cmake/: Build_DREAM3D.cmake  DREAM3D_SDK_PluginList.txt  External_Boost.cmake  External_DOxygen.cmake  External_DREAM3DData.cmake  External_Discount.cmake  External_Eigen.cmake  External_HDF5.cmake  External_ITK.cmake  External_ProtoBuf.cmake  External_Qt5.cmake  External_Qwt.cmake  External_TBB.cmake  Linux_DREAM3D_SDK.cmake  OSX_DREAM3D_SDK.cmake  Qt_HeadlessInstall.bat  Qt_HeadlessInstall_OSX.js  Qt_HeadlessInstall_Win64.js  WIN_DREAM3D_SDK.cmake
cmake/qwt/: qwtconfig.pri.in
docker/: Dockerfile  ReadMe.md  buildimage.sh
docs/: Making-an-SDK-(Linux).md  Making-an-SDK-(OS-X).md  Making-an-SDK-(Windows).md  Making_an_SDK_Linux.md  Making_an_SDK_OSX.md  Making_an_SDK_Windows.md
projects/: AWS.cmake  Boost.cmake  DOxygen.cmake  DREAM3D.cmake  DREAM3DData.cmake  DREAM3D_SDK_PluginList.txt  Discount.cmake  Eigen.cmake  HDF5.cmake  Haru.cmake  ITK.cmake  ITK4.cmake  ITK5.cmake  ProtoBuf.cmake  Pybind11.cmake  Python.cmake  Qt5.cmake  Qwt.cmake  TBB.cmake  VTK.cmake  ghcFileSystem.cmake  nlohmann_json.cmake  oneTBB.cmake
projects/apple/: OSX_DREAM3D_SDK.cmake  Qt_HeadlessInstall_OSX.js
projects/patches/qwt/: qwtconfig.pri.in
projects/patches/qwt/src/: src.pro.in
projects/unix/: Linux_DREAM3D_SDK.cmake  Qt5_linux_install.sh.in  Qt_HeadlessInstall.js
projects/win32/: Qt_HeadlessInstall_Win64.js  WIN_DREAM3D_SDK.cmake
